# ElGamal

./: README.md
src/: CMakeLists.txt  ElGamal_parallel.cpp  ElGamal_parallel.h  ElGamal_standard.cpp  ElGamal_standard.h  ElGamal_vector.cpp  ElGamal_vector.h  config.h  main.cpp
